Entity runs now sans graph-db.